--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-copy": "0.8.0",
     "grunt-contrib-jshint-jsx": "^0.10.4",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.4",
     "grunt-eslint": "^16.0.0",
     "grunt-package": "0.1.3",
     "grunt-publish": "0.0.5",
